--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -14,12 +14,14 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 14
-      - name: Build
+      - name: Install Dependencies
         run:
           npm install
+      - name: Build
+        run:
           npm run build
 
-      - uses: shallwefootball/s3-upload-action@master
+      - uses: shallwefootball/upload-s3-action@v1.1.3
         with:
           aws_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
